# TmarTerminal

./: .gitignore  CHANGELOG.md  README.md  SETUP.md  dev.ps1  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: UPDATER.md
src/: App.tsx  index.css  settings.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  pty.rs  ssh.rs  sshconfig.rs
src/components/: CommandPalette.tsx  ConnectModal.tsx  LocalPanel.tsx  PaneLauncher.tsx  PortForwardDashboard.tsx  PortForwardModal.tsx  SettingsModal.tsx  SftpPanel.tsx  Sidebar.tsx  TabBar.tsx  Terminal.tsx  TitleBar.tsx  UpdateModal.tsx  WelcomeScreen.tsx
src/hooks/: useUpdater.ts
src/store/: useStore.ts
src/utils/: uuid.ts
